--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="zh-Hans">
 <head>
+    <link type="text/css" rel="stylesheet" href="css/fonts.css" />
     <link type="text/css" rel="stylesheet" href="css/mopimopi.css" />
     <script type="text/javascript" src="js/common.min.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
